--- a/app/config/application.conf
+++ b/app/config/application.conf
@@ -1,3 +1,9 @@
 include "akka"
 include "xitrum"
 include "db"
+
+admin {
+  email    = "admin@admin.com"
+  password = "password"
+  name     = "admin"
+}
