--- a/app/config/db.conf
+++ b/app/config/db.conf
@@ -1,6 +1,6 @@
 db {
   # Make sure that database is not `konnect`
-  database = "chatwork"
+  database = "cwwork"
   host     = "127.0.0.1"
   port     = 27017
   # user   = "Optional"
